@@ -447,6 +447,7 @@ static unsigned long setmempressthr(char *);
 static unsigned long setmempressdur(char *);
 #endif
 static unsigned long setreduceprologchecks(char *);
+static unsigned long setextpwdretry(char *);
 static unsigned long setthreadunlinkcalls(char *);
 unsigned long rppthrottle(char *value);
 
@@ -518,6 +519,7 @@ static struct specials
   { "rpp_throttle", rppthrottle },
   { "thread_unlink_calls", setthreadunlinkcalls },
   { "attempt_to_make_dir", setattempttomakedir },
+  { "ext_pwd_retry",       setextpwdretry },
   { NULL,                  NULL }
   };
 
@@ -550,6 +552,7 @@ struct config common_config[] =
 
 int                     LOGLEVEL = 0;  /* valid values (0 - 10) */
 int                     LOGKEEPDAYS = 0; /* days each log file should be kept before deleting */
+int                     EXTPWDRETRY = 3; /* # of times to try external pwd check */
 int                     DEBUGMODE = 0;
 int                     DOBACKGROUND = 1;
 char                    DEFAULT_UMASK[1024];
@@ -3183,6 +3186,26 @@ static unsigned long setlogkeepdays(
 
   return(1);
   }
+
+
+static unsigned long setextpwdretry(
+
+  char *value)  /* I */
+
+  {
+  int i;
+
+  i = (int)atoi(value);
+
+  if (i < 0)
+    {
+    return(0);  /* error */
+    }
+
+  EXTPWDRETRY = i;
+
+  return(1);
+  } /* END setextpwdretry() */
 
 
 
