@@ -38,6 +38,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       for any other reasons
   b - Fixed qsub so it would still allow -l gpus=x as a gres.
   c - fix a crash in the dynamic_string.c code
+  e - add a mom config option - $ext_pwd_retry - to specify # of retries on 
+      checking for password validity.
 
 3.0.2
   c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
